--- a/kkotgalpi/package.json
+++ b/kkotgalpi/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^6.4.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "gestalt": "^41.0.0",
     "jquery": "^3.6.0",
+    "mongodb": "^3.6.4",
     "nodemon": "^2.0.15",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2"
