--- a/whoever/package.json
+++ b/whoever/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
-    "firebase": "^9.6.2",
+    "firebase": "8.6.5",
     "firebase-tools": "^10.0.1",
     "global": "^4.4.0",
     "quasar": "^2.0.0",
