--- a/whoever/package.json
+++ b/whoever/package.json
@@ -17,6 +17,7 @@
     "global": "^4.4.0",
     "quasar": "^2.0.0",
     "vue": "^3.0.0",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
